--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -101,6 +102,5 @@
         }
       }
     }
-  },
-  "defaultProject": "women-empowerment"
+  }
 }
